@startuml SRP New
class Car {
    String _id
    String _model
    String _brand
    String getId()
    String getModel()
    String getBrand()

}
class CarComparer {
    Car getBestCar()
}
class CarList {
    Car getCarById()
    String getCarsNames()
}
class CarManager {
    Car getCarFromDb()
    String getCarsNames()
    Car getBestCar()
}

class CarFormatter {
    String getCarName()
    String getCarNames()
}

CarList <.. CarManager
CarComparer <.. CarManager
CarFormatter <.. CarManager
Car <.. CarList
@enduml